# yiot-openwrt

./: .gitmodules  Makefile  README.md
src/: .gitignore  CMakeLists.txt
src/common/: CMakeLists.txt
src/common/ext/filesystem/: CMakeLists.txt  yiot-littlefs-hal.h  yiot-littlefs-storage.c  yiot-littlefs-storage.h  yiot-littlefs.c  yiot-littlefs.h
src/common/include/common/config/pc/: logger-config.h
src/common/include/common/helpers/: app-helpers.h  app-storage.h  command.h  event-group-bits.h  file-cache.h  file-io.h  settings.h
src/common/include/common/iotkit-impl/firmware/: firmware-nix-impl.h
src/common/include/common/iotkit-impl/netif/: netif-udp.h
src/common/include/common/iotkit-impl/storage/: storage-nix-impl.h
src/common/src/: yiot-littlefs-hal.c
src/common/src/helpers/: app-helpers.c  app-storage.c  event-group-bits.c  file-cache.c  file-io.c  msg-queue.c  settings.cpp  timer.cpp
src/common/src/iotkit-impl/: helpers.c
src/common/src/iotkit-impl/firmware/: firmware-impl.c
src/common/src/iotkit-impl/netif/: netif-udp.cpp
src/common/src/iotkit-impl/storage/: storage-nix-impl.c
src/common/src/iotkit-impl/threadsafe/: lock-nix-hal.c
src/firmware-verifier/: CMakeLists.txt
src/firmware-verifier/files/: firmware-verifier
src/firmware-verifier/include/helpers/: msg-queue.h
src/firmware-verifier/include/sdk-impl/netif/: netif-udp-broadcast.h  packets-queue.h
src/firmware-verifier/include/sdk-impl/storage/: storage-nix-impl.h
src/firmware-verifier/src/: main.c
src/firmware-verifier/src/helpers/: app-helpers.c  app-storage.c  event-group-bits.c  file-cache.c  file-io.c  msg-queue.c
src/firmware-verifier/src/sdk-impl/firmware/: firmware-impl.c
src/firmware-verifier/src/sdk-impl/logger/: logger-impl.c
src/firmware-verifier/src/sdk-impl/netif/: netif-udp-broadcast.c  packets-queue.c
src/firmware-verifier/src/sdk-impl/storage/: storage-nix-impl.c
src/license-processor/: CMakeLists.txt
src/license-processor/files/: license
src/license-processor/src/: main.c
src/scripts/: create-ram-mtd.sh
src/security-provisioner/: CMakeLists.txt
src/security-provisioner/files/: yiot.init
src/security-provisioner/include/: init.h
src/security-provisioner/include/commands/: pc.h
src/security-provisioner/scripts/: create-user.sh  enable-ssh.sh  set-network-params.sh
src/security-provisioner/src/: init.c  main.c
src/security-provisioner/src/commands/: device-info.c  pc.cpp  reset.cpp
