#  ────────────────────────────────────────────────────────────
#                     ╔╗  ╔╗ ╔══╗      ╔════╗
#                     ║╚╗╔╝║ ╚╣╠╝      ║╔╗╔╗║
#                     ╚╗╚╝╔╝  ║║  ╔══╗ ╚╝║║╚╝
#                      ╚╗╔╝   ║║  ║╔╗║   ║║
#                       ║║   ╔╣╠╗ ║╚╝║   ║║
#                       ╚╝   ╚══╝ ╚══╝   ╚╝
#    ╔╗╔═╗                    ╔╗                     ╔╗
#    ║║║╔╝                   ╔╝╚╗                    ║║
#    ║╚╝╝  ╔══╗ ╔══╗ ╔══╗  ╔╗╚╗╔╝  ╔══╗ ╔╗ ╔╗╔╗ ╔══╗ ║║  ╔══╗
#    ║╔╗║  ║║═╣ ║║═╣ ║╔╗║  ╠╣ ║║   ║ ═╣ ╠╣ ║╚╝║ ║╔╗║ ║║  ║║═╣
#    ║║║╚╗ ║║═╣ ║║═╣ ║╚╝║  ║║ ║╚╗  ╠═ ║ ║║ ║║║║ ║╚╝║ ║╚╗ ║║═╣
#    ╚╝╚═╝ ╚══╝ ╚══╝ ║╔═╝  ╚╝ ╚═╝  ╚══╝ ╚╝ ╚╩╩╝ ║╔═╝ ╚═╝ ╚══╝
#                    ║║                         ║║
#                    ╚╝                         ╚╝
#
#    Lead Maintainer: Roman Kutashenko <kutashenko@gmail.com>
#  ────────────────────────────────────────────────────────────

cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

# ---------------------------------------------------------------------------
# Project version
# ---------------------------------------------------------------------------
set(KS_TARGET_VERSION "0.1.0")

# ---------------------------------------------------------------------------
#   Options
# ---------------------------------------------------------------------------
option(BUILD_VERIFIER_ENABLE "Enable building of Firmware verifier app" ON)
option(BUILD_PROVISIONER_ENABLE "Enable building of Device provisioner" ON)

# ---------------------------------------------------------------------------
#   C++
# ---------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# ---------------------------------------------------------------------------
# Define project
# ---------------------------------------------------------------------------
project(yiot-openwrt VERSION ${KS_TARGET_VERSION} LANGUAGES C CXX)
file(WRITE "${CMAKE_BINARY_DIR}/VERSION" "${KS_TARGET_VERSION}")

# ---------------------------------------------------------------------------
#	YIoT OpenWRT core
# ---------------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/common)

# ---------------------------------------------------------------------------
#	Firmware verifier application
# ---------------------------------------------------------------------------
if (BUILD_VERIFIER_ENABLE)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/firmware-verifier)
endif()

# ---------------------------------------------------------------------------
#	Device provisioner application
# ---------------------------------------------------------------------------
if (BUILD_PROVISIONER_ENABLE)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/security-provisioner)
endif()
