#  ────────────────────────────────────────────────────────────
#                     ╔╗  ╔╗ ╔══╗      ╔════╗
#                     ║╚╗╔╝║ ╚╣╠╝      ║╔╗╔╗║
#                     ╚╗╚╝╔╝  ║║  ╔══╗ ╚╝║║╚╝
#                      ╚╗╔╝   ║║  ║╔╗║   ║║
#                       ║║   ╔╣╠╗ ║╚╝║   ║║
#                       ╚╝   ╚══╝ ╚══╝   ╚╝
#    ╔╗╔═╗                    ╔╗                     ╔╗
#    ║║║╔╝                   ╔╝╚╗                    ║║
#    ║╚╝╝  ╔══╗ ╔══╗ ╔══╗  ╔╗╚╗╔╝  ╔══╗ ╔╗ ╔╗╔╗ ╔══╗ ║║  ╔══╗
#    ║╔╗║  ║║═╣ ║║═╣ ║╔╗║  ╠╣ ║║   ║ ═╣ ╠╣ ║╚╝║ ║╔╗║ ║║  ║║═╣
#    ║║║╚╗ ║║═╣ ║║═╣ ║╚╝║  ║║ ║╚╗  ╠═ ║ ║║ ║║║║ ║╚╝║ ║╚╗ ║║═╣
#    ╚╝╚═╝ ╚══╝ ╚══╝ ║╔═╝  ╚╝ ╚═╝  ╚══╝ ╚╝ ╚╩╩╝ ║╔═╝ ╚═╝ ╚══╝
#                    ║║                         ║║
#                    ╚╝                         ╚╝
#
#    Lead Maintainer: Roman Kutashenko <kutashenko@gmail.com>
#  ────────────────────────────────────────────────────────────

cmake_minimum_required(VERSION 3.11 FATAL_ERROR)

include(GNUInstallDirs)

project(bootloader VERSION 0.1.0 LANGUAGES C)

    #
    #	Firmware verifier target
    #
    add_executable(yiot-firmware-verifier)

    #
    #	Header/Source files
    #
    target_sources(yiot-firmware-verifier
             PRIVATE

             #	Sources
             ${CMAKE_CURRENT_LIST_DIR}/src/main.c
            )

    #
    #	Definitions
    #
    target_compile_definitions(yiot-firmware-verifier
            PRIVATE
            )

    #
    #   Include directories
    #
    target_include_directories(yiot-firmware-verifier
            PUBLIC
            ${CMAKE_CURRENT_LIST_DIR}/include
            )

    #
    #	Link libraries
    #
    target_link_libraries(yiot-firmware-verifier
            PUBLIC
            yiot-openwrt
            )

    #
    #   Install app
    #
    install(TARGETS yiot-firmware-verifier
            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
            )

