#  ────────────────────────────────────────────────────────────
#                     ╔╗  ╔╗ ╔══╗      ╔════╗
#                     ║╚╗╔╝║ ╚╣╠╝      ║╔╗╔╗║
#                     ╚╗╚╝╔╝  ║║  ╔══╗ ╚╝║║╚╝
#                      ╚╗╔╝   ║║  ║╔╗║   ║║
#                       ║║   ╔╣╠╗ ║╚╝║   ║║
#                       ╚╝   ╚══╝ ╚══╝   ╚╝
#    ╔╗╔═╗                    ╔╗                     ╔╗
#    ║║║╔╝                   ╔╝╚╗                    ║║
#    ║╚╝╝  ╔══╗ ╔══╗ ╔══╗  ╔╗╚╗╔╝  ╔══╗ ╔╗ ╔╗╔╗ ╔══╗ ║║  ╔══╗
#    ║╔╗║  ║║═╣ ║║═╣ ║╔╗║  ╠╣ ║║   ║ ═╣ ╠╣ ║╚╝║ ║╔╗║ ║║  ║║═╣
#    ║║║╚╗ ║║═╣ ║║═╣ ║╚╝║  ║║ ║╚╗  ╠═ ║ ║║ ║║║║ ║╚╝║ ║╚╗ ║║═╣
#    ╚╝╚═╝ ╚══╝ ╚══╝ ║╔═╝  ╚╝ ╚═╝  ╚══╝ ╚╝ ╚╩╩╝ ║╔═╝ ╚═╝ ╚══╝
#                    ║║                         ║║
#                    ╚╝                         ╚╝
#
#    Lead Maintainer: Roman Kutashenko <kutashenko@gmail.com>
#  ────────────────────────────────────────────────────────────

cmake_minimum_required(VERSION 3.11 FATAL_ERROR)

include(GNUInstallDirs)

project(license-processor VERSION 0.1.0 LANGUAGES C)

    #
    #	License processor target
    #
    add_executable(yiot-license-processor)

    #
    #	Header/Source files
    #
    target_sources(yiot-license-processor
             PRIVATE

             #	Sources
             ${CMAKE_CURRENT_LIST_DIR}/src/main.c
            )

    #
    #	Definitions
    #
    target_compile_definitions(yiot-license-processor
            PRIVATE
            )

    #
    #   Include directories
    #
    target_include_directories(yiot-license-processor
            PUBLIC
            ${CMAKE_CURRENT_LIST_DIR}/include
            )

    #
    #	Link libraries
    #
    target_link_libraries(yiot-license-processor
            PUBLIC
            yiot-openwrt
            )

    #
    #   Install app
    #
    install(TARGETS yiot-license-processor
            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
            )

